--- a/MixwellSoftware/MixwellAngular/src/app/app.component.css
+++ b/MixwellSoftware/MixwellAngular/src/app/app.component.css
@@ -4,6 +4,14 @@ h1 {
   color: #999;
   margin-bottom: 0;
 }
+/*
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+}
+*/
+
 h2 {
   font-size: 2em;
   margin-top: 0;
