--- a/MixwellSoftware/MixwellAngular/src/app/services/services.component.html
+++ b/MixwellSoftware/MixwellAngular/src/app/services/services.component.html
@@ -5,14 +5,14 @@
     <input #serviceName />
   </label>
   <!-- (click) passes input value to add() and then clears the input -->
-  <button (click)="add(seiceName.value); serviceName.value=''">
+  <!--button (click)="add(serviceName.value); serviceName.value=''">
     add
-  </button>
+  </!--button-->
 </div>
 
 <ul class="services">
   <li *ngFor="let service of services">
-    <a routerLink="/detail/{{service.id}}">
+    <a routerLink="/sdetail/{{service.id}}">
       <span class="badge">{{service.id}}</span> {{service.name}}
     </a>
     <button class="delete" title="delete service"
