--- a/MixwellSoftware/MixwellAngular/src/app/employee-search/employee-search.component.html
+++ b/MixwellSoftware/MixwellAngular/src/app/employee-search/employee-search.component.html
@@ -4,9 +4,9 @@
   <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
 
   <ul class="search-result">
-    <li *ngFor="let hero of heroes$ | async" >
-      <a routerLink="/detail/{{hero.id}}">
-        {{hero.name}}
+    <li *ngFor="let employee of employees$ | async" >
+      <a routerLink="/detail/{{employee.id}}">
+        {{employee.name}}
       </a>
     </li>
   </ul>
