--- a/MixwellSoftware/MixwellAngular/src/app/employees/employees.component.css
+++ b/MixwellSoftware/MixwellAngular/src/app/employees/employees.component.css
@@ -1,11 +1,11 @@
 /* EmployeesComponent's private CSS styles */
-.heroes {
+.employees {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
   width: 15em;
 }
-.heroes li {
+.employees li {
   position: relative;
   cursor: pointer;
   background-color: #EEE;
@@ -15,13 +15,13 @@
   border-radius: 4px;
 }
 
-.heroes li:hover {
+.employees li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
 
-.heroes a {
+.employees a {
   color: #888;
   text-decoration: none;
   position: relative;
@@ -29,11 +29,11 @@
   width: 250px;
 }
 
-.heroes a:hover {
+.employees a:hover {
   color:#607D8B;
 }
 
-.heroes .badge {
+.employees .badge {
   display: inline-block;
   font-size: small;
   color: white;
