--- a/MixwellSoftware/MixwellAngular/src/app/employee-detail/employee-detail.component.html
+++ b/MixwellSoftware/MixwellAngular/src/app/employee-detail/employee-detail.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="hero">
-  <h2>{{ hero.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{hero.id}}</div>
+<div *ngIf="employee">
+  <h2>{{ employee.name | uppercase }} Details</h2>
+  <div><span>id: </span>{{employee.id}}</div>
   <div>
     <label>name:
-      <input [(ngModel)]="hero.name" placeholder="name"/>
+      <input [(ngModel)]="employee.name" placeholder="name"/>
     </label>
   </div>
   <button (click)="goBack()">go back</button>
