--- a/MixwellSoftware/WixwellWPF/Views/MainWindow.xaml
+++ b/MixwellSoftware/WixwellWPF/Views/MainWindow.xaml
@@ -1,11 +1,16 @@
 ﻿<Window x:Class="MixwellWPF.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="300" Width="300">
+        Title="MainWindow" Height="300" Width="379.817">    
+    <Window.Resources>
+        <SolidColorBrush Color="LightBlue" x:Key="buttonBackground"/>
+        <SolidColorBrush Color="LightSlateGray" x:Key="buttonBackground1"/>
+    </Window.Resources>
     <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
-        <Label>Customer Name:</Label>
-        <TextBox Text="{Binding Customer.Name, UpdateSourceTrigger=PropertyChanged}" Width="156"/>
-        <Button Command="{Binding UpdataCommand}">Update</Button>
+        <Label Background="{StaticResource buttonBackground1}">Customer Name:</Label>
+        <TextBox Name="mytextbox" Text="{Binding Customer.Name, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="156" Background="{DynamicResource buttonBackground}"/>      
+        <Button Name="colbutton" Command="{Binding UpdataCommand}" Click="colbutton_Click">Color</Button>
+        <Button Name="updatebutton" Command="{Binding ChangecolorCommand}" RenderTransformOrigin="-6.191,5.366" Width="44">Update</Button>
     </StackPanel>
     <!--Grid>
         <TextBox x:Name="txt1" HorizontalAlignment="Left" Height="23" Margin="122,140,0,0" TextWrapping="Wrap" 
